--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,35 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import "~react-image-gallery/styles/css/image-gallery.css";
+
+.image-gallery-thumbnails .image-gallery-thumbnails-container {
+    text-align: left;
+}
+
+.image-gallery-thumbnail {
+ border-radius: 2px;
+ overflow: hidden;
+}
+
+.image-gallery-thumbnail {
+    @apply border;
+    @apply border-transparent;
+
+}
+.image-gallery-thumbnail:hover {
+    @apply border-primary;
+    @apply border;
+}
+.image-gallery-thumbnail:hover,
+.image-gallery-thumbnail.active,
+.image-gallery-thumbnail:focus {
+    @apply border-primary;
+    @apply border;
+}
+
+.image-gallery-left-nav .image-gallery-svg, .image-gallery-right-nav .image-gallery-svg {
+    height: 50px;
+    width: 50px;
+}
