--- a/app/(site)/globals.css
+++ b/app/(site)/globals.css
@@ -291,3 +291,23 @@
   border-radius: 100%;
   color: #dc2626;
 }
+
+.article {
+  font-size: 1.125rem;
+  h1, h2, h3 {
+    margin: 1rem 0 0.5rem 0;
+    font-weight: bold;
+  }
+
+  h1 {
+    font-size: 1.6rem;  
+  }
+  
+  h2 {
+    font-size: 1.4rem;  
+  }
+
+  h3 {
+    font-size: 1.3rem;
+  }
+}
